# PoseTrackCV

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_RU.md  pyproject.toml  requirements.txt
configs/: classical_cv.yaml  config.yaml  yolo_config.yaml
docs/en/: architecture.md  benchmarking.md  dataset_preparation.md  evaluation.md  final_report.md  final_report_template.md  math_model.md  training.md  yolo_training.md
docs/ru/: architecture.md  benchmarking.md  dataset_preparation.md  evaluation.md  final_report.md  final_report_template.md  math_model.md  training.md  yolo_training.md
scripts/: run_benchmark.py  run_classical_cv.py
src/: cli.py
src/data/: collect_dataset.py  collect_dataset_template.py  convert_annotations.py  split_dataset.py  validate_dataset.py
src/detection/: detector_interface.py  export_yolo_dataset.py  infer_yolo.py  train_yolo.py
src/evaluation/: benchmark.py  compare_methods.py  evaluate_predictions.py  metrics.py  report_generator.py
src/pose/: classical_cv.py  geometry_utils.py  pca_orientation.py  pose_estimator.py
src/utils/: cli_utils.py  config_utils.py  image_utils.py  io_utils.py  logger.py
src/visualization/: draw_predictions.py  overlay_utils.py  plot_metrics.py
tests/: test_dataset.py  test_geometry.py  test_metrics.py
