[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brushpose-ai"
version = "1.0.0"
description = "BrushPose AI: toothbrush localization and orientation estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

