[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brushpose-ai"
version = "1.0.0"
description = "BrushPose AI: toothbrush detection, center localization, and orientation estimation for tabletop CV"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "[Your Name or Team]", email = "maintainer@example.com" }]
keywords = ["computer-vision", "pose-estimation", "opencv", "yolo", "ml-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/<your-org>/BrushPoseAI"
Documentation = "https://github.com/<your-org>/BrushPoseAI/tree/main/docs"
Repository = "https://github.com/<your-org>/BrushPoseAI"
